# saddle-rendering-stochastic-texturing

./: .gitignore  Cargo.toml  LICENSE  README.md  __data.json  index.html
.github/workflows/: ci.yaml
_app/: version.json
_app/immutable/chunks/: -hZMxpdf.js  B_1NJ4pP.js  CcNymbhN.js  Du2MKSzw.js  UhdnXQdL.js
_app/immutable/entry/: app.DprxuflI.js  start.CljrC6b8.js
_app/immutable/nodes/: 0.mdNPOUV9.js  1.pP57HVlc.js  2.CQ6I6OuC.js  3.DJyW9r8x.js  4.CHt-T4Oh.js
demo/basic/: index.html
demo/height_blend/: index.html
demo/lab/: index.html
demo/normal_maps/: index.html
demo/showcase/: index.html
demo/stress/: index.html
demo/terrain_bridge/: index.html
demos/basic/: index.html
demos/height_blend/: index.html
demos/lab/: index.html
demos/normal_maps/: index.html
demos/showcase/: index.html
demos/stress/: index.html
demos/terrain_bridge/: index.html
docs/: architecture.md  configuration.md
docs/architecture/: __data.json  index.html
docs/architecture.md/: index.html
docs/configuration/: __data.json  index.html
docs/configuration.md/: index.html
examples/: Cargo.toml
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
examples/common/: Cargo.toml
examples/common/src/: lib.rs
examples/height_blend/: Cargo.toml
examples/height_blend/src/: main.rs
examples/lab/: Cargo.toml  README.md
examples/lab/src/: e2e.rs  main.rs
examples/lab/src/scenarios/: mod.rs
examples/normal_maps/: Cargo.toml
examples/normal_maps/src/: main.rs
examples/showcase/: Cargo.toml
examples/showcase/src/: main.rs
examples/stress/: Cargo.toml
examples/stress/src/: main.rs
examples/terrain_bridge/: Cargo.toml
examples/terrain_bridge/src/: main.rs
src/: components.rs  config.rs  config_tests.rs  diagnostics.rs  gpu.rs  lib.rs  pbr.rs  shader_library.rs  systems.rs  systems_tests.rs
src/shaders/: stochastic_pbr.wgsl  stochastic_sampling.wgsl  stochastic_types.wgsl
