[package]
name = "saddle-rendering-stochastic-texturing"
version = "0.1.0"
edition = "2024"
publish = false
repository = "https://github.com/julien-blanchon/saddle-rendering-stochastic-texturing"
license = "MIT-0"
description = "Reusable stochastic texturing and anti-repetition toolkit for Bevy"

[lib]
name = "stochastic_texturing"

[dependencies]
bevy = "0.18"

[workspace]

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"
