[package]
name = "saddle-rendering-stochastic-texturing-lab"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = []
dev = ["dep:bevy_brp_extras", "bevy/bevy_remote", "bevy/serialize"]
e2e = ["dep:saddle-bevy-e2e"]

[dependencies]
bevy = { version = "0.18" }
bevy_brp_extras = { version = "0.19", optional = true }
saddle-bevy-e2e = { git = "https://github.com/julien-blanchon/saddle-bevy-e2e", features = ["json"], optional = true }
stochastic_texturing = { workspace = true }
saddle-rendering-stochastic-texturing-example-common = { path = "../common" }

[lints]
workspace = true
