[package]
name = "saddle-rendering-stochastic-texturing-example-normal-maps"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
bevy = { workspace = true }
stochastic_texturing = { workspace = true }
saddle-rendering-stochastic-texturing-example-common = { path = "../common" }

[lints]
workspace = true

